--- a/index.html
+++ b/index.html
@@ -261,6 +261,8 @@
             left: 50%;
             transform: translateX(-50%);
             cursor: pointer;
+            padding-left: 10px;
+            padding-right: 10px;
         }
 
         .pertanyaan h3,
@@ -1780,7 +1782,7 @@
 
             const questionListContainer = document.createElement('div');
             questionListContainer.style.backgroundColor = 'white';
-            questionListContainer.style.padding = '15px';
+            questionListContainer.style.padding = '20px';
             questionListContainer.style.paddingLeft = '32px';
             questionListContainer.style.paddingBottom = '20px';
             questionListContainer.style.border = 'none';
