--- a/index.html
+++ b/index.html
@@ -2011,6 +2011,7 @@
                 z-index: 10000;
                 padding: 20px 0;
                 padding-left: 42px;
+                padding-right: 42px;
             `;
 
             const container = document.createElement('div');
