--- a/index.html
+++ b/index.html
@@ -1043,7 +1043,7 @@
             quizData.questions[0] = {
                 id: 1,
                 section: "Reading",
-                question: "[1 – 2] 다음 그림을 보고 맞는 단어나 문장을 고르십시오.",
+                question: "<p>[1 – 2] <b>다음 그림을 보고 맞는 단어나 문장을 고르십시오.</b></p>",
                 description: "1.",
                 image: "image/1.png",
                 options: ["착암기 – 바위를 뚫어요.", "착암기 – 광석을 운반해요.", "컨베이어 – 바위를 뚫어요.", "컨베이어 – 광석을 운반해요."],
