--- a/index.html
+++ b/index.html
@@ -887,6 +887,12 @@
         u {
             text-decoration: underline;
         }
+
+        b,
+        strong {
+            font-weight: 700 !important;
+            color: #000;
+        }
     </style>
 </head>
 
