--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <title>Quiz 40 Questions</title>
+    <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@400;700&display=swap" rel="stylesheet">
     <style>
         :root {
             --primary-color: #6eb0f1;
@@ -31,7 +32,7 @@
             width: 100%;
             height: 100%;
             overflow: hidden;
-            font-family: Arial, sans-serif;
+            font-family: 'Noto Sans KR', Arial, sans-serif;
             font-size: var(--base-font-size);
             color: var(--text-color);
         }
@@ -891,7 +892,6 @@
         b,
         strong {
             font-weight: 700 !important;
-            color: #000;
         }
     </style>
 </head>
